--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <div   class="first-input">
                             <h4 class=" sub-heading">Select the Units</h4>
                             <select name="" class="unit-select"  id="inputtype" >
-                                <option value="">--Please Select The Unit--</option>
+                                <option value="" id="selection">--Please Select The Unit--</option>
                                 <option value="kilometer">Kilometer</option>
                                 <option value="meter">meter</option>
                                 <option value="centimeter">Centimeter</option>
@@ -32,7 +32,7 @@
                         <div class="Second-input">
                             <div class="sub-heading">Select the Units</div>
                             <select name="" class="unit-select"  id="resulttype">
-                                <option value="">--Please Select The Unit--</option>
+                                <option value=""  id="selection">--Please Select The Unit--</option>
                                 <option value="kilometer">Kilometer</option>
                                 <option value="meter">meter</option>
                                 <option value="centimeter">Centimeter</option>
